// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutation results should warn when the result fields don't match the query fields 1`] = `
[MockFunction] {
  "calls": [
    [
      "Missing field 'description' while writing result {
  "id": "2",
  "name": "Todo 2",
  "__typename": "createTodo"
}",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`mutation results should write results to cache according to errorPolicy 1`] = `{}`;

exports[`mutation results should write results to cache according to errorPolicy 2`] = `
{
  "Person:{"name":"Jenn Creighton"}": {
    "__typename": "Person",
    "name": "Jenn Creighton",
  },
  "ROOT_MUTATION": {
    "__typename": "Mutation",
  },
}
`;

exports[`mutation results should write results to cache according to errorPolicy 3`] = `
{
  "Person:{"name":"Ellen Shapiro"}": {
    "__typename": "Person",
    "name": "Ellen Shapiro",
  },
  "Person:{"name":"Jenn Creighton"}": {
    "__typename": "Person",
    "name": "Jenn Creighton",
  },
  "ROOT_MUTATION": {
    "__typename": "Mutation",
  },
}
`;
